refactor: remove common compatibility layers
